add_subdirectory(bin)
if(${BUILDTEST})
add_subdirectory(test)
endif()
add_library(FWCoreFramework SHARED 
  src/Breakpoints.cc
  src/ComponentMaker.cc
  src/DataKey.cc
  src/DataKeyTags.cc
  src/DataProxy.cc
  src/DataProxyProvider.cc
  src/DelayedReader.cc
  src/DependentRecordIntervalFinder.cc
  src/EDAnalyzer.cc
  src/EDConsumerBase.cc
  src/EDFilter.cc
  src/EDLooper.cc
  src/EDLooperBase.cc
  src/EDProducer.cc
  src/ESHandle.cc
  src/ESHandleExceptionFactory.cc
  src/ESProducer.cc
  src/ESProducerLooper.cc
  src/ESProxyFactoryProducer.cc
  src/ESValidHandle.cc
  src/EarlyDeleteHelper.cc
  src/EndPathStatusInserter.cc
  src/Event.cc
  src/EventForOutput.cc
  src/EventPrincipal.cc
  src/EventProcessor.cc
  src/EventSelector.cc
  src/EventSetup.cc
  src/EventSetupImpl.cc
  src/EventSetupProvider.cc
  src/EventSetupProviderMaker.cc
  src/EventSetupRecord.cc
  src/EventSetupRecordImpl.cc
  src/EventSetupRecordIntervalFinder.cc
  src/EventSetupRecordKey.cc
  src/EventSetupRecordProvider.cc
  src/EventSetupsController.cc
  src/ExceptionActions.cc
  src/ExceptionHelpers.cc
  src/Factory.cc
  src/GenericHandle.cc
  src/GlobalSchedule.cc
  src/HCTypeTag.cc
  src/HistoryAppender.cc
  src/IOVSyncValue.cc
  src/InputSource.cc
  src/InputSourceFactory.cc
  src/IntersectingIOVRecordIntervalFinder.cc
  src/LooperFactory.cc
  src/LuminosityBlock.cc
  src/LuminosityBlockForOutput.cc
  src/LuminosityBlockPrincipal.cc
  src/LuminosityBlockProcessingStatus.cc
  src/MakeDataException.cc
  src/MergeableRunProductMetadata.cc
  src/MergeableRunProductProcesses.cc
  src/ModuleChanger.cc
  src/ModuleFactory.cc
  src/ModuleHolder.cc
  src/ModuleRegistry.cc
  src/NoDataException.cc
  src/NoRecordException.cc
  src/OccurrenceForOutput.cc
  src/OutputModule.cc
  src/OutputModuleCommunicator.cc
  src/OutputModuleCommunicatorT.cc
  src/Path.cc
  src/PathStatusInserter.cc
  src/PathsAndConsumesOfModules.cc
  src/Principal.cc
  src/PrincipalCache.cc
  src/PrincipalGetAdapter.cc
  src/ProcessingController.cc
  src/ProducerBase.cc
  src/ProductDeletedException.cc
  src/ProductRegistryHelper.cc
  src/ProductResolverBase.cc
  src/ProductResolvers.cc
  src/ProductSelector.cc
  src/ProductSelectorRules.cc
  src/RecordDependencyRegister.cc
  src/Run.cc
  src/RunForOutput.cc
  src/RunPrincipal.cc
  src/Schedule.cc
  src/ScheduleInfo.cc
  src/ScheduleItems.cc
  src/SharedResourcesRegistry.cc
  src/SignallingProductRegistry.cc
  src/SourceFactory.cc
  src/StreamSchedule.cc
  src/SubProcess.cc
  src/SystemTimeKeeper.cc
  src/TriggerNamesService.cc
  src/TriggerResultInserter.cc
  src/TriggerResultsBasedEventSelector.cc
  src/UnscheduledAuxiliary.cc
  src/ValidityInterval.cc
  src/Worker.cc
  src/WorkerInPath.cc
  src/WorkerMaker.cc
  src/WorkerManager.cc
  src/WorkerRegistry.cc
  src/WorkerT.cc
  src/defaultCmsRunServices.cc
  src/edmodule_mightGet_config.cc
  src/getAllTriggerNames.cc
  src/getProducerParameterSet.cc
  src/global/EDAnalyzerBase.cc
  src/global/EDFilterBase.cc
  src/global/EDProducerBase.cc
  src/global/OutputModuleBase.cc
  src/global/filterImplementors.cc
  src/global/outputmoduleImplementors.cc
  src/global/producerImplementors.cc
  src/insertSelectedProcesses.cc
  src/limited/EDAnalyzerBase.cc
  src/limited/EDFilterBase.cc
  src/limited/EDProducerBase.cc
  src/limited/OutputModuleBase.cc
  src/limited/filterImplementors.cc
  src/limited/outputmoduleImplementors.cc
  src/limited/producerImplementors.cc
  src/one/EDAnalyzerBase.cc
  src/one/EDFilterBase.cc
  src/one/EDProducerBase.cc
  src/one/OutputModuleBase.cc
  src/one/analyzerImplementors.cc
  src/one/filterImplementors.cc
  src/one/outputmoduleImplementors.cc
  src/one/producerImplementors.cc
  src/stream/EDAnalyzerAdaptorBase.cc
  src/stream/EDAnalyzerBase.cc
  src/stream/EDFilterAdaptorBase.cc
  src/stream/EDFilterBase.cc
  src/stream/EDProducerAdaptorBase.cc
  src/stream/EDProducerBase.cc
  src/stream/ProducingModuleAdaptorBase.cc
  src/stream/ProducingModuleHelper.cc
  src/throwIfImproperDependencies.cc
)

target_include_directories(FWCoreFramework PRIVATE ${CMAKE_SOURCE_DIR})

target_include_directories(FWCoreFramework PUBLIC
${Boost_INCLUDE_DIR}
${Boost_INCLUDE_DIR}/python
${MD5_INCLUDE_DIR}
${Python2_INCLUDE_DIR}
${ROOT_INCLUDE_DIR}
${TBB_INCLUDE_DIRS}
${TINYXML2_INCLUDE_DIR}
${UUID_INCLUDE_DIR}
${XERCESC_INCLUDE_DIR}
)

target_link_libraries(FWCoreFramework PUBLIC
Boost::filesystem
Boost::iostreams
Boost::program_options
Boost::python27
Boost::regex
Boost::serialization
Boost::system
Boost::thread
DataFormatsCommon
DataFormatsProvenance
FWCoreCommon
FWCoreConcurrency
FWCoreMessageLogger
FWCoreParameterSet
FWCorePluginManager
FWCoreServiceRegistry
FWCoreUtilities
FWCoreVersion
Python2::Python
ROOT::Core
ROOT::MathCore
ROOT::Net
ROOT::RIO
ROOT::Thread
ROOT::Tree
Threads::Threads
)


install( TARGETS FWCoreFramework DESTINATION  lib  EXPORT cmssw::FWCoreFramework)

